ingress-controller/ingress-wear.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    app: ingress-wear
  name: ingress-wear
spec:
 backend:
      serviceName: wear-service
      servicePort: 80
